# devsearch

./: README.md  pyproject.toml
app/: settings.py
devsearch/: .env.template
devsearch/app/: settings.py  urls.py
devsearch/projects/: urls.py  views.py
devsearch/templates/layouts/: base.html
devsearch/templates/projects/: index.html  single.html
scripts/: run.py
